# online_education

.github/workflows/: ci.yml
online_education/: README.md  docker-compose.yml  dockerfile  pyproject.toml
online_education/config/: settings.py  urls.py
online_education/materials/: models.py  permissions.py  tests.py  urls.py
online_education/materials/migrations/: 0001_initial.py  0005_alter_course_user_alter_lesson_user_subscribe.py  0008_payment.py  0012_alter_course_description_alter_lesson_description.py  0013_alter_course_name_alter_lesson_name.py  0014_alter_course_amount_alter_course_name_and_more.py  0015_alter_course_amount_alter_lesson_amount.py
online_education/users/: admin.py  models.py  serializers.py  urls.py  views.py
online_education/users/management/commands/: func_payment.py
online_education/users/migrations/: 0001_initial.py  0002_alter_user_options_user_avatar_user_city_and_more.py  0003_payments.py  0005_alter_payments_method_payment.py  0006_alter_payments_method_payment.py  0007_alter_payments_method_payment_alter_user_city_and_more.py  0008_alter_payments_sum_payment.py  0009_alter_payments_sum_payment.py
